# mwax_db2fits

./: .gitignore  CHANGELOG.MD  CMakeLists.txt  Doxyfile  README.md  build.sh  build_debug.sh  dummy_header  monitor_health_test.py  run_tests.sh
cmake/Modules/: FindPSRDADA.cmake
scripts/: dump_fits_hdu.py  get_tile_list.py  legacy_mwa.py  monitor_health_test.py  mwax_fits2lfiles.py  mwax_test.py  requirements.txt  reset.sh  test_compress.py  test_datacapture.sh  test_header1  test_header2  test_junkdb.sh  test_nicdb.sh  test_obs1_1_header  test_obs1_2_header  test_obs2_1_header  test_reset.sh  view_fits.py
src/: args.c  args.h  dada.h  dada_dbfits.c  dada_dbfits.h  dada_nicdb.c  dada_nicdb.h  fitswriter.c  fitswriter.h  global.c  global.h  health.c  health.h  log.c  log.h  main.c  main.h  utils.c  utils.h  version.h
tests/: README.md  build_tests.sh  common.c  common.h  quit_header.txt  requirements.txt  run_tests.sh  test01.py  test02.py  test03.py  test04.py  tests_common.py
tests/test01/: README.md  make_test01_data.c  run_test01.sh  test01_data.xlsx  test01_header_1.txt  test_data.xlsx
tests/test02/: README.md  make_test02_data.c  run_test02.sh  test02_data.xlsx  test02_obs1_header_1.txt  test02_obs1_header_3.txt  test02_obs1_header_4.txt  test02_obs2_header_1.txt  test_data.xlsx
tests/test03/: README.md  make_test03_data.c  run_test03.sh  test03_data.xlsx  test03_header_1.txt  test03_header_2.txt  test03_header_3.txt  test_data.xlsx
tests/test04/: README.md  run_test04.sh  test04_data.xlsx  test04_header_2.txt
